@@ -1,3 +1,7 @@
+2017-07-26  Jonathan Wakely  <jwakely@redhat.com>
+
+	* testsuite/27_io/basic_fstream/53984.cc: Fix test.
+
 2017-07-26  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* testsuite/27_io/basic_fstream/53984.cc: Fix typo in dg-require
